--- a/index.html
+++ b/index.html
@@ -3,268 +3,184 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<meta name="theme-color" content="#111111" />
+<meta name="theme-color" content="#0f0f10" />
 
-<!-- TROJAN HORSE PREVIEW -->
-<title>Wait… look at this</title>
-<meta name="description" content="This is weird…" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Wait… look at this" />
-<meta property="og:description" content="This is weird…" />
-<meta property="og:image" content="https://xstajayx.github.io/message-media-space/preview.png" />
-<meta property="og:url" content="https://xstajayx.github.io/message-media-space/" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Wait… look at this" />
-<meta name="twitter:description" content="This is weird…" />
-<meta name="twitter:image" content="https://xstajayx.github.io/message-media-space/preview.png" />
+<title>Message Media Space</title>
+<meta name="description" content="Pranks • Fun • Mini games — quick share." />
+
+<!-- 🔹 AdSense Loader (GOES IN HEAD ONCE) -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8837377060291347"
+     crossorigin="anonymous"></script>
 
 <style>
-  *{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
+  :root{
+    --bg:#0f0f10;
+    --line: rgba(255,255,255,.10);
+    --txt:#fff;
+    --muted: rgba(255,255,255,.72);
+    --accent:#3a82f7;
+    --accent2:#7c3aed;
+  }
+  *{ box-sizing:border-box; -webkit-tap-highlight-color:transparent; }
   body{
     margin:0;
-    background:#0f0f10;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-    color:#fff;
-    overflow:hidden;
+    background:
+      radial-gradient(900px 600px at 60% -10%, rgba(58,130,247,.16), transparent 55%),
+      radial-gradient(900px 650px at 10% 110%, rgba(124,58,237,.12), transparent 55%),
+      var(--bg);
+    color:var(--txt);
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   }
+  .wrap{
+    max-width:500px;
+    margin:0 auto;
+    padding:16px 12px calc(18px + env(safe-area-inset-bottom));
+  }
+  .card{
+    background: rgba(255,255,255,.05);
+    border:1px solid var(--line);
+    border-radius:22px;
+    padding:14px;
+    box-shadow:0 20px 70px rgba(0,0,0,.45);
+  }
+  .title{ font-size:20px; font-weight:900; margin-bottom:6px; }
+  .sub{ font-size:14px; color:var(--muted); }
 
-  /* Fake app header */
-  .appbar{
-    height:56px;
-    display:flex;
-    align-items:center;
-    padding:0 16px;
-    background:#1c1c1e;
-    font-weight:600;
-    letter-spacing:.2px;
-  }
-
-  .content{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
-    height:calc(100vh - 56px);
-    text-align:center;
-    padding:20px;
-  }
-
-  .previewBox{
-    width:min(320px,80vw);
-    aspect-ratio:1/1;
-    border-radius:20px;
-    background:linear-gradient(135deg,#2a2a2e,#1c1c1f);
-    box-shadow:0 10px 40px rgba(0,0,0,.6);
-    position:relative;
-    overflow:hidden;
-  }
-
-  .spinner{
-    width:48px;height:48px;
-    border-radius:50%;
-    border:4px solid rgba(255,255,255,.18);
-    border-top-color:#fff;
-    animation:spin 1s linear infinite;
-    margin-top:22px;
-  }
-  @keyframes spin{to{transform:rotate(360deg)}}
-
-  .status{
-    margin-top:14px;
-    font-size:15px;
-    color:#d7d7d7;
-  }
-
-  /* Fake system popups */
-  .dialog{
-    position:fixed;
-    left:50%;top:50%;
-    transform:translate(-50%,-50%);
-    width:min(340px,90vw);
-    background:#2c2c2e;
-    border-radius:18px;
-    padding:18px 16px;
-    box-shadow:0 20px 60px rgba(0,0,0,.7);
-    text-align:center;
-    display:none;
-    z-index:50;
-  }
-  .dialog h3{
-    margin:0 0 8px;
-    font-size:16px;
-    font-weight:650;
-  }
-  .dialog p{
-    margin:0 0 14px;
-    font-size:14px;
-    color:#d0d0d0;
-    line-height:1.4;
-  }
-  .dialog button{
-    background:#3a82f7;
-    border:none;
-    border-radius:12px;
-    padding:10px 16px;
-    color:#fff;
-    font-weight:650;
-    width:100%;
-    cursor:pointer;
-  }
-
-  /* Glitch effect */
-  .glitch{ animation:shake .12s infinite; }
-  @keyframes shake{
-    0%{transform:translate(0,0)}
-    25%{transform:translate(1px,-1px)}
-    50%{transform:translate(-1px,1px)}
-    75%{transform:translate(1px,1px)}
-    100%{transform:translate(0,0)}
-  }
-
-  /* Screen flash */
-  #flash{
-    position:fixed; inset:0;
-    background:#fff;
-    opacity:0;
-    pointer-events:none;
-    z-index:999;
-    transition: opacity .08s linear;
-  }
-
-  /* Ending overlay (neutral) */
-  #ending{
-    position:fixed;
-    inset:0;
-    background: rgba(15,15,16,.92);
-    display:none;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
-    padding:20px;
-    z-index:100;
-    backdrop-filter: blur(8px);
-  }
-  .endCard{
-    width:min(420px,92vw);
-    background:#1c1c1e;
-    border:1px solid rgba(255,255,255,.08);
-    border-radius:20px;
-    padding:18px 16px;
-    box-shadow:0 20px 60px rgba(0,0,0,.65);
-  }
-  .endTitle{
-    font-weight:700;
-    font-size:18px;
-    margin:0 0 8px;
-  }
-  .endSub{
-    margin:0 0 14px;
-    color:#cfcfcf;
-    font-size:14px;
-    line-height:1.45;
-  }
-  .endBtn{
-    width:100%;
-    padding:12px 14px;
-    border-radius:14px;
-    border:none;
-    background:#3a82f7;
-    color:#fff;
-    font-weight:700;
-    cursor:pointer;
-  }
-  .tiny{
-    margin-top:10px;
+  .section{ margin-top:14px; }
+  .section h3{
     font-size:12px;
-    color:#9a9a9a;
+    text-transform:uppercase;
+    color:rgba(255,255,255,.6);
+    margin-bottom:10px;
+  }
+
+  .item{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    gap:10px;
+    padding:12px;
+    border-radius:18px;
+    border:1px solid var(--line);
+    background:rgba(255,255,255,.04);
+    margin-bottom:10px;
+  }
+  .left{ display:flex; align-items:center; gap:10px; }
+  .ico{ font-size:20px; }
+  .btn, .btn2{
+    border-radius:14px;
+    padding:10px 12px;
+    font-weight:900;
+    cursor:pointer;
+    border:none;
+  }
+  .btn{
+    background:linear-gradient(135deg,#3a82f7,#7c3aed);
+    color:#fff;
+  }
+  .btn2{
+    background:rgba(255,255,255,.06);
+    border:1px solid var(--line);
+    color:#fff;
+  }
+
+  /* Ad container styling */
+  .adSlot{
+    margin-top:12px;
+    padding:10px;
+    border-radius:18px;
+    border:1px dashed rgba(255,255,255,.15);
+    background:rgba(0,0,0,.25);
+    overflow:hidden;
+  }
+
+  .tiny{
+    margin-top:14px;
+    text-align:center;
+    color:rgba(255,255,255,.5);
+    font-size:12px;
   }
 </style>
 </head>
+
 <body>
+<div class="wrap">
 
-<div id="flash"></div>
-
-<div class="appbar">Media Viewer</div>
-
-<div class="content" id="mainUI">
-  <div class="previewBox" id="box"></div>
-  <div class="spinner" id="spinner"></div>
-  <div class="status" id="status">Opening media…</div>
-</div>
-
-<div class="dialog" id="dialog1">
-  <h3>Storage Issue</h3>
-  <p>There was a problem loading this media.</p>
-  <button id="d1ok">OK</button>
-</div>
-
-<div class="dialog" id="dialog2">
-  <h3>System Sync</h3>
-  <p>Attempting to recover file…</p>
-  <button id="d2ok">Continue</button>
-</div>
-
-<!-- Neutral ending: button to report page -->
-<div id="ending" aria-hidden="true">
-  <div class="endCard">
-    <p class="endTitle">Media could not be opened</p>
-    <p class="endSub">A quick report is available for this session.</p>
-    <button class="endBtn" id="goReport">View report</button>
-    <div class="tiny">If sound didn’t play, tap once before the report loads.</div>
+  <div class="card">
+    <div class="title">Quick share</div>
+    <div class="sub">
+      This was just a web prank. Nothing on the phone was accessed.
+      Pick one below and send it to a friend 😈
+    </div>
   </div>
+
+  <!-- 🔹 TOP AD -->
+  <div class="adSlot">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-8837377060291347"
+         data-ad-slot="1111111111"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+  </div>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+  <div class="section">
+    <h3>Pranks</h3>
+
+    <div class="item">
+      <div class="left">
+        <div class="ico">💬</div>
+        <div>Message loading</div>
+      </div>
+      <div>
+        <button class="btn2" onclick="location.href='https://xstajayx.github.io/message-media-space/'">Open</button>
+        <button class="btn" onclick="sharePrank('https://xstajayx.github.io/message-media-space/')">Share</button>
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="left">
+        <div class="ico">📹</div>
+        <div>CCTV viewer</div>
+      </div>
+      <div>
+        <button class="btn2" onclick="location.href='https://xstajayx.github.io/message-media-space/p/scenario-b/'">Open</button>
+        <button class="btn" onclick="sharePrank('https://xstajayx.github.io/message-media-space/p/scenario-b/')">Share</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- 🔹 MID AD -->
+  <div class="adSlot">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-8837377060291347"
+         data-ad-slot="2222222222"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+  </div>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+  <div class="tiny">
+    Built by Jworldcreations
+  </div>
+
 </div>
 
 <script>
-  // ===== CONFIG =====
-  const REPORT_URL = "./report.html?src=main";
-
-  const statusEl = document.getElementById("status");
-  const box = document.getElementById("box");
-  const flash = document.getElementById("flash");
-
-  function doFlash(){
-    flash.style.opacity = "0.85";
-    setTimeout(()=> flash.style.opacity = "0", 90);
+async function sharePrank(url){
+  const data = {
+    title: "Wait… what is this?",
+    text: "I’ve never seen this before…",
+    url
+  };
+  if(navigator.share){
+    try{ await navigator.share(data); return; }catch(e){}
   }
-
-  // Short, snappy pacing
-  setTimeout(()=>{ statusEl.textContent = "Loading preview…"; }, 1100);
-  setTimeout(()=>{ document.getElementById("dialog1").style.display="block"; }, 2600);
-
-  document.getElementById("d1ok").addEventListener("click", ()=>{
-    document.getElementById("dialog1").style.display="none";
-    document.getElementById("dialog2").style.display="block";
-  });
-
-  document.getElementById("d2ok").addEventListener("click", ()=>{
-    document.getElementById("dialog2").style.display="none";
-    glitchSequence();
-  });
-
-  function glitchSequence(){
-    statusEl.textContent="System stabilising…";
-    box.classList.add("glitch");
-    doFlash();
-    if(navigator.vibrate) navigator.vibrate([60,40,60]);
-
-    setTimeout(()=>{ statusEl.textContent="Unexpected display error"; doFlash(); }, 850);
-    setTimeout(()=>{ statusEl.textContent="Retrying…"; }, 1500);
-
-    setTimeout(()=>{
-      box.classList.remove("glitch");
-      showEnding();
-    }, 2600);
-  }
-
-  function showEnding(){
-    document.getElementById("ending").style.display="flex";
-    document.getElementById("ending").setAttribute("aria-hidden","false");
-  }
-
-  document.getElementById("goReport").addEventListener("click", ()=>{
-    location.href = REPORT_URL;
-  });
+  navigator.clipboard.writeText(url);
+  alert("Link copied ✅");
+}
 </script>
-
 </body>
 </html>
