--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <div>Message loading</div>
       </div>
       <div>
-        <button class="btn2" onclick="location.href='https://xstajayx.github.io/message-media-space/'">Open</button>
-        <button class="btn" onclick="sharePrank('https://xstajayx.github.io/message-media-space/')">Share</button>
+        <button class="btn2" onclick="location.href='https://xstajayx.github.io/message-media-space/p/message/'">Open</button>
+        <button class="btn" onclick="sharePrank('https://xstajayx.github.io/message-media-space/p/message/')">Share</button>
       </div>
     </div>
 
