--- a/index.html
+++ b/index.html
@@ -363,11 +363,45 @@
       </div>
     </div>
 
+    <!-- ✅ ADDED: WHACK RUSH -->
+    <div class="item">
+      <div class="left">
+        <div class="ico">🔨</div>
+        <div class="label">
+          <b>Whack Rush</b>
+          <span>Whack fast as you can</span>
+        </div>
+      </div>
+      <div>
+        <button class="btn2" onclick="location.href='https://xstajayx.github.io/message-media-space/p/whack-rush/'">Open</button>
+        <button class="btn" onclick="shareLink('https://xstajayx.github.io/message-media-space/p/whack-rush/','Game')">Share</button>
+      </div>
+    </div>
+
+    <!-- ✅ ADDED: PLINKO -->
+    <div class="item">
+      <div class="left">
+        <div class="ico">🎲</div>
+        <div class="label">
+          <b>Plinko</b>
+          <span>Drop + bounce to score</span>
+        </div>
+      </div>
+      <div>
+        <button class="btn2" onclick="location.href='https://xstajayx.github.io/message-media-space/p/plinko/'">Open</button>
+        <button class="btn" onclick="shareLink('https://xstajayx.github.io/message-media-space/p/plinko/','Game')">Share</button>
+      </div>
+    </div>
+
   </div>
 
   <div class="tiny">
-    Built by Jworldcreations
-  </div>
+  Built by JWorld Creations<br>
+  <a href="https://xstajayx.github.io/" style="color:#aaa;">Main Site</a> ·
+  <a href="https://xstajayx.github.io/about.html" style="color:#aaa;">About</a> ·
+  <a href="https://xstajayx.github.io/privacy.html" style="color:#aaa;">Privacy</a> ·
+  <a href="mailto:jworldcreations@hotmail.com" style="color:#aaa;">Contact</a>
+</div>
 
 </div>
 
@@ -430,7 +464,9 @@ function renderTrending(){
     "quick-hunt":"Quick Hunt",
     "one-tap-aim":"One Tap Aim",
     "reaction-snap":"Reaction Snap",
-    "memory-flash":"Memory Flash"
+    "memory-flash":"Memory Flash",
+    "whack-rush":"Whack Rush",
+    "plinko":"Plinko"
   };
 
   list.innerHTML = "";
