--- a/index.html
+++ b/index.html
@@ -178,16 +178,18 @@
     </div>
   </div>
 
-  <!-- 🔹 TOP AD -->
-  <div class="adSlot">
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-8837377060291347"
-         data-ad-slot="1111111111"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-  </div>
-  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8837377060291347"
+     crossorigin="anonymous"></script>
+<!-- Games -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8837377060291347"
+     data-ad-slot="2548270428"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
   <!-- PRANKS -->
   <div class="section" id="secPranks">
@@ -264,16 +266,18 @@
     </div>
   </div>
 
-  <!-- 🔹 MID AD -->
-  <div class="adSlot">
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-8837377060291347"
-         data-ad-slot="2222222222"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-  </div>
-  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8837377060291347"
+     crossorigin="anonymous"></script>
+<!-- Games -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8837377060291347"
+     data-ad-slot="2548270428"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
   <!-- GAMES -->
   <div class="section" id="secGames">
