--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
     gap:10px;
   }
 
+.adLabel{
+  text-align:center;
+  font-size:11px;
+  color:rgba(255,255,255,.45);
+  margin-bottom:6px;
+  letter-spacing:.5px;
+  text-transform:uppercase;
+}
+     
   .item{
     display:flex;
     justify-content:space-between;
@@ -181,6 +190,10 @@
 
 <!-- Prank -->
 <div class="adSlot" aria-label="Advertisement">
+  <div style="text-align:center; font-size:11px; color:rgba(255,255,255,.45); margin-bottom:6px;">
+    Advertisement
+  </div>
+
   <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-8837377060291347"
@@ -191,8 +204,6 @@
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
-
 
   <!-- PRANKS -->
   <div class="section" id="secPranks">
@@ -272,6 +283,10 @@
 
 <!-- Games -->
 <div class="adSlot" aria-label="Advertisement">
+  <div style="text-align:center; font-size:11px; color:rgba(255,255,255,.45); margin-bottom:6px;">
+    Advertisement
+  </div>
+
   <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-8837377060291347"
@@ -282,6 +297,7 @@
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
 
   <!-- GAMES -->
   <div class="section" id="secGames">
